<resources>
    <string name="app_name">Practica1</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">FORTECO</string>
    <string name="nav_header_subtitle">fpestades@xtec.cat</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_galeria">Galeria</string>
    <string name="menu_pdf">PDF</string>
    <string name="menu_configuracio">Configuració</string>
    <string name="detalle_curso">Detall curs</string>
    <string name="communicate">Communicate</string>
    <string name="menu_comparteix">Comparteix</string>
    <string name="menu_envia">Envia</string>
    <string name="action_enviar">Enviar</string>
    <string name="action_compartir">Compartir</string>
</resources>