<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_galeria" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_pdf" />
        <item
            android:id="@+id/nav_configuracio"
            android:icon="@drawable/ic_baseline_construction_24"
            android:title="@string/menu_configuracio" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <group
                android:id="@+id/menu_bottom"
                android:checkableBehavior="single">

                <item
                    android:id="@+id/share_action"
                    android:icon="@drawable/ic_baseline_share_24"
                    android:title="@string/menu_comparteix" />

                <item
                    android:id="@+id/send_action"
                    android:icon="@drawable/ic_baseline_send_24"
                    android:title="@string/menu_envia" />
            </group>
        </menu>

    </item>
</menu>